Introduce custom d3 data viz from splice junctions.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "bootstrap": "^3.4.1",
+    "d3": "^7.8.5",
     "igv": "^2.15.8",
     "jquery": "^3.7.0",
+    "iobio-api-client": "^0.11.0",
     "qs": "^6.11.2",
     "roboto-fontface": "*",
     "uiv": "^2.0.6",
