Use polyfill plugin so that app builds. Workaround problem with geneinfo CORS by only using sandbox gru for endpoint of new bedRegion service.

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "bootstrap": "^3.4.1",
     "d3": "^7.8.5",
     "igv": "^2.15.8",
-    "jquery": "^3.7.0",
     "iobio-api-client": "^0.11.0",
+    "jquery": "^3.7.0",
     "qs": "^6.11.2",
     "roboto-fontface": "*",
     "uiv": "^2.0.6",
+    "vite-plugin-node-polyfills": "^0.11.3",
     "vue": "^3.2.0",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
