--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vite-plugin-node-polyfills": "^0.11.3",
     "vue": "^3.2.0",
     "vuetify": "^3.0.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "fibridge-host": "^0.16.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
