--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "roboto-fontface": "*",
     "uiv": "^2.0.6",
     "vite-plugin-node-polyfills": "^0.11.3",
-    "vue": "3.2.0",
-    "vuetify": "3.0.0",
+    "vite-plugin-package-version": "^1.1.0",
+    "vue": "^3.2.0",
+    "vuetify": "3.3.3",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
