--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "async": "^3.2.5",
     "bootstrap": "^3.4.1",
     "d3": "^7.8.5",
     "d3-svg-legend": "^2.25.6",
@@ -27,7 +28,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.63.4",
-    "vite": "^4.2.0",
+    "vite": "^4.5.14",
     "vite-plugin-vuetify": "^1.0.0"
   }
 }
